fix some schemas and configs. Fix power on/off wrappers to remove --force which isn't a ludus option for power

--- a/base-configs/basic-ad-network.yml
+++ b/base-configs/basic-ad-network.yml
@@ -24,6 +24,7 @@ ludus:
     cpus: 4
     windows:
       install_additional_tools: true
+      chocolatey_ignore_checksums: true
       office_version: 2019
       office_arch: 64bit
     domain:
