--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cli-wrapper"
   ],
   "author": "Ludus MCP Contributors",
-  "license": "CC-BY-NC-SA-4.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
     "@types/js-yaml": "^4.0.9",
