--- a/schemas/ludus_ghosts_server.yaml
+++ b/schemas/ludus_ghosts_server.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs GHOSTS server for activity simulation"
 repository: "https://github.com/frack113/ludus_ghosts_server"
 author: "frack113"
-
+installation_method: "galaxy"
 dependencies: []
 
 variables: {} 
