--- a/schemas/ludus_graylog_server.yaml
+++ b/schemas/ludus_graylog_server.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs Graylog server for log management"
 repository: "https://github.com/frack113/ludus_graylog_server"
 author: "frack113"
-
+installation_method: "directory"
 dependencies: []
 
 variables:
