--- a/schemas/ludus_velociraptor_client.yaml
+++ b/schemas/ludus_velociraptor_client.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs Velociraptor client agent"
 repository: "https://github.com/fmurer/ludus_velociraptor_client"
 author: "fmurer"
-
+installation_method: "directory"
 dependencies: []
 
 variables:
