--- a/schemas/badsectorlabs.ludus_commandovm.yaml
+++ b/schemas/badsectorlabs.ludus_commandovm.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs CommandoVM on Windows systems"
 repository: "https://github.com/badsectorlabs/ludus_commandovm"
 author: "Bad Sector Labs"
-
+installation_method: "ludus ansible role add badsectorlabs.ludus_commandovm"
 dependencies: []
 
 variables:
