--- a/schemas/badsectorlabs.ludus_flarevm.yaml
+++ b/schemas/badsectorlabs.ludus_flarevm.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs FlareVM on Windows systems"
 repository: "https://github.com/badsectorlabs/ludus_flarevm"
 author: "Bad Sector Labs"
-
+installation_method: "ludus ansible role add badsectorlabs.ludus_flarevm"
 dependencies: []
 
 variables:
