--- a/schemas/badsectorlabs.ludus_vulhub.yaml
+++ b/schemas/badsectorlabs.ludus_vulhub.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Runs Vulhub environments on a Linux system"
 repository: "https://github.com/badsectorlabs/ludus_vulhub"
 author: "Bad Sector Labs"
-
+installation_method: "ludus ansible role add badsectorlabs.ludus_vulhub"
 dependencies: 
   - "geerlingguy.docker"
 
