--- a/schemas/curi0usjack.ludus_enable_asr.yaml
+++ b/schemas/curi0usjack.ludus_enable_asr.yaml
@@ -7,8 +7,7 @@ version: "1.0.0"
 description: "Enables 16 Windows Defender Attack Surface Reduction (ASR) rules to harden endpoint security"
 repository: "https://github.com/curi0usJack/Ludus-MDE-MDI-Roles/tree/main/ludus_enable_asr"
 author: "curi0usJack (@curi0usJack)"
-
-installation_method: "directory"
+installation_method: "ludus ansible role add -d /path/to/directory"
 note: "This role requires Windows hosts with Windows Defender available. No variables required - all ASR rules are enabled automatically."
 warning: "ASR rules may impact legitimate applications. Test in non-production environments first."
 
