--- a/schemas/curi0usjack.ludus_enable_mdi_gpo.yaml
+++ b/schemas/curi0usjack.ludus_enable_mdi_gpo.yaml
@@ -7,8 +7,7 @@ version: "1.0.0"
 description: "Creates GPOs with recommended auditing settings for Microsoft Defender for Identity (MDI) rollout"
 repository: "https://github.com/curi0usJack/Ludus-MDE-MDI-Roles/tree/main/ludus_enable_mdi_gpo"
 author: "curi0usJack (@curi0usJack)"
-
-installation_method: "directory"
+installation_method: "ludus ansible role add -d /path/to/directory"
 note: "This role requires a Windows Domain Controller with Active Directory module available. Installs DefenderForIdentity PowerShell module."
 warning: "This role modifies domain-wide Group Policy settings."
 
