--- a/schemas/ludus_caldera_agent.yaml
+++ b/schemas/ludus_caldera_agent.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs MITRE Caldera agent"
 repository: "https://github.com/frack113/ludus_caldera_agent"
 author: "frack113"
-
+installation_method: "ludus ansible role add ludus_caldera_agent"
 dependencies: []
 
 variables:
