--- a/schemas/ludus_juiceshop.yaml
+++ b/schemas/ludus_juiceshop.yaml
@@ -4,7 +4,7 @@ version: "1.0.0"
 description: "Installs OWASP Juice Shop vulnerable web application"
 repository: "https://github.com/xurger/ludus_juiceshop"
 author: "xurger"
-installation_method: "directory"
+installation_method: "ludus ansible role add -d /path/to/directory"
 dependencies: []
 
 variables:
